Details
-
Bug
-
Status: Closed
-
Critical
-
Resolution: Fixed
-
0.32
-
None
-
RHEL 5
Description
...
[ 46%] Building CXX object src/CMakeFiles/qpidbroker.dir/qmf/org/apache/qpid/broker/EventQueueThresholdExceeded.cpp.o
cd /root/iboverma/rh-qpid-trunk/qpid/cpp/build/src && /usr/bin/c++ -Dqpidbroker_EXPORTS -D_IN_QPID_BROKER -fvisibility-inlines-hidden -Werror -pedantic -Wall -Wextra -Wno-shadow -Wpointer-arith -Wcast-qual -Wcast-align -Wno-long-long -Wvolatile-register-var -Winvalid-pch -Wno-system-headers -Woverloaded-virtual -O2 -g -fPIC -I/root/iboverma/rh-qpid-trunk/qpid/cpp/src -I/root/iboverma/rh-qpid-trunk/qpid/cpp/src/../include -I/root/iboverma/rh-qpid-trunk/qpid/cpp/build/src -I/root/iboverma/rh-qpid-trunk/qpid/cpp/build/src/../include -I/usr/include/nss3 -I/usr/include/nspr4 -pthread -o CMakeFiles/qpidbroker.dir/qmf/org/apache/qpid/broker/EventQueueThresholdExceeded.cpp.o -c /root/iboverma/rh-qpid-trunk/qpid/cpp/build/src/qmf/org/apache/qpid/broker/EventQueueThresholdExceeded.cpp
cc1plus: warnings being treated as errors
/root/iboverma/rh-qpid-trunk/qpid/cpp/src/qpid/messaging/amqp/SenderContext.h:50: warning: ‘class qpid::messaging::amqp::SenderContext’ has virtual functions but non-virtual destructor
/root/iboverma/rh-qpid-trunk/qpid/cpp/src/qpid/messaging/amqp/Transaction.h:43: warning: ‘class qpid::messaging::amqp::Transaction’ has virtual functions but non-virtual destructor
/root/iboverma/rh-qpid-trunk/qpid/cpp/src/qpid/messaging/amqp/ConnectionContext.cpp: In member function ‘void qpid::messaging::amqp::ConnectionContext::close()’:
/root/iboverma/rh-qpid-trunk/qpid/cpp/src/qpid/messaging/amqp/ConnectionContext.cpp:233: error: ‘class boost::intrusive_ptr<qpid::sys::TimerTask>’ has no member named ‘reset’
/root/iboverma/rh-qpid-trunk/qpid/cpp/src/qpid/messaging/amqp/ConnectionContext.cpp: In member function ‘void qpid::messaging::amqp::ConnectionContext::startTxSession(boost::shared_ptr<qpid::messaging::amqp::SessionContext>)’:
/root/iboverma/rh-qpid-trunk/qpid/cpp/src/qpid/messaging/amqp/ConnectionContext.cpp:1239: error: call of overloaded ‘attach(boost::shared_ptr<qpid::messaging::amqp::SessionContext>&, boost::shared_ptr<qpid::messaging::amqp::Transaction>&)’ is ambiguous
/root/iboverma/rh-qpid-trunk/qpid/cpp/src/qpid/messaging/amqp/ConnectionContext.cpp:419: note: candidates are: void qpid::messaging::amqp::ConnectionContext::attach(boost::shared_ptr<qpid::messaging::amqp::SessionContext>, boost::shared_ptr<qpid::messaging::amqp::SenderContext>)
/root/iboverma/rh-qpid-trunk/qpid/cpp/src/qpid/messaging/amqp/ConnectionContext.cpp:429: note: void qpid::messaging::amqp::ConnectionContext::attach(boost::shared_ptr<qpid::messaging::amqp::SessionContext>, boost::shared_ptr<qpid::messaging::amqp::ReceiverContext>)
make[2]: *** [src/CMakeFiles/qpidmessaging.dir/qpid/messaging/amqp/ConnectionContext.cpp.o] Error 1