QPID-6427: Problem building trunk qpid cpp on RHEL 5

Fixed a couple of legitimate compiler warnings, worked around a couple of compiler weaknesses.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1664517 13f79535-47bb-0310-9956-ffa450edef68