cpp/src/qpid/messaging/amqp/ConnectionContext.cpp
@@ -230,7 +230,7 @@ void ConnectionContext::close()
     }
     if (ticker) {
         ticker->cancel();
-        ticker.reset();
+        ticker = boost::intrusive_ptr<qpid::sys::TimerTask>();
     }
 }
 
@@ -1236,7 +1236,7 @@ void ConnectionContext::startTxSession(boost::shared_ptr<SessionContext> session
         QPID_LOG(debug, id << " attaching transaction for " << session->getName());
         boost::shared_ptr<Transaction> tx(new Transaction(session->session));
         session->transaction = tx;
-        attach(session, tx);
+        attach(session, boost::shared_ptr<SenderContext>(tx));
         tx->declare(boost::bind(&ConnectionContext::send, this, _1, _2, _3, _4, _5), session);
     } catch (const Exception& e) {
         throw TransactionError(Msg() << "Cannot start transaction: " << e.what());
